# backend

./: .env.example  .gitignore  Cargo.toml
api/: Cargo.toml
api/src/: lib.rs  typings.rs
api/src/controller/auth/: credential.rs
api/src/infra/: mod.rs
api/src/infra/handler/: response.rs
api/src/infra/middleware/: auth.rs  session.rs
api/src/state/: mod.rs
database/: Cargo.toml
database/src/: lib.rs
database/src/entity/: file.rs  invite.rs  mod.rs  prelude.rs  user.rs
database/src/pool/: mod.rs
database/src/redis/: mod.rs
database/src/repository/: file.rs  invite.rs  mod.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20241211_185925_user.rs  m20241211_190006_file.rs  m20241211_190013_invite.rs
src/: main.rs
