[package]
name = "api"
version = "0.1.0"
edition = "2024"
authors = ["E"]

[dependencies]
actix-web = "4.9.0"
dotenvy = "0.15.7"
sea-orm = { version = "1.1.0", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros", "with-json", "with-uuid" ] }#

serde_json = "1.0.133"
serde = { version = "1.0.216", features = ["derive"] }

database = { path = "../database" }

# metrics
opentelemetry-otlp = "0.27.0"
opentelemetry = "0.27.0"
opentelemetry_sdk = "0.27.0"
opentelemetry-stdout = { version = "0.27.0", features = ["trace", "metrics"] }
actix-web-opentelemetry = { version = "0.19.0", features = ["metrics-prometheus", "sync-middleware", "awc"] }
